--- a/index.html
+++ b/index.html
@@ -14,15 +14,27 @@
     <header class="header-bg">
         <div class="header">
             <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft"></a>
-            <nav aria-label="primaria">
+            <nav aria-label="primary">
                 <ul class="header-menu">
-                    <li><a href="#">Bicicleta</a></li>
-                    <li><a href="#">Seguro</a></li>
+                    <li><a href="#">Bicicletas</a></li>
+                    <li><a href="#">Seguros</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <main class="introduction-bg">
+        <div class="introduction">
+            <div class="introduction-content">
+                <h1>Bicicletas feitas sob medida<span>.</span></h1>
+                <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft</p>
+                <a href="#">Escolha a sua</a>
+            </div>
+            <div class="introduction-img">
+                <img src="./img/fotos/introducao.jpg" alt="bicicleta elétrica">
+            </div>
+        </div>
+    </main>
    
 </body>
 </html>
