--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <main class="introduction-bg">
         <div class="introduction">
             <div class="introduction-content">
-                <h1>Bicicletas feitas sob medida<span>.</span></h1>
-                <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft</p>
+                <h1 class="big-text">Bicicletas feitas sob medida<span>.</span></h1>
+                <p class="medium-text">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft</p>
                 <a class="botao" href="#">Escolha a sua</a>
             </div>
             <div class="introduction-img">
@@ -44,6 +44,13 @@
             </div>
         </div>
     </main>
-   
+    <h2 class="big-text">escolha a sua<span>.</span></h2>
+    <div>
+        <ul>
+            <li>
+                <img src="img/" alt="">
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
