--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Bikcraft - Bicicletas Elétricas</title>
+
+    <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+
     <meta name="description" content="Bicicleta elétrica de alta presisão e qualidade, sob medida para o cliente. explore o mundo na sua velocidade com a Bikcraft">
 
     <link rel="stylesheet" href="./css/style.css">
@@ -24,7 +27,7 @@
         <div class="header">
             <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft"></a>
             <nav aria-label="primary">
-                <ul class="header-menu">
+                <ul class="header-menu font-1-m">
                     <li><a href="#">Bicicletas</a></li>
                     <li><a href="#">Seguros</a></li>
                     <li><a href="#">Contato</a></li>
@@ -35,8 +38,8 @@
     <main class="introduction-bg">
         <div class="introduction">
             <div class="introduction-content">
-                <h1 class="big-text">Bicicletas feitas sob medida<span>.</span></h1>
-                <p class="medium-text">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft</p>
+                <h1 class="font-1-xxl">Bicicletas feitas sob medida<span>.</span></h1>
+                <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft</p>
                 <a class="botao" href="#">Escolha a sua</a>
             </div>
             <div class="introduction-img">
@@ -44,13 +47,34 @@
             </div>
         </div>
     </main>
-    <h2 class="big-text">escolha a sua<span>.</span></h2>
-    <div>
-        <ul>
+
+    <article class="bike">
+        <h2 class="font-1-xxl">escolha a sua<span>.</span></h2>
+
+        <ul class="bike-list">
             <li>
-                <img src="img/" alt="">
+                <a href="./bike/magic.html">
+                    <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+                    <h3 class="font-1-xl">Magic Might</h3>
+                    <span class="font-2-m">R$ 2499</span>
+                </a>
             </li>
+            <li>
+                <a href="./bike/nimbus.html">
+                    <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+                    <h3 class="font-1-xl">Nimbus Stark</h3>
+                    <span class="font-2-m">R$ 4999</span>
+                </a>
+            </li>
+            <li>
+                <a href="./bike/nebula.html">
+                    <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
+                    <h3 class="font-1-xl">Nebula Cosmic</h3>
+                    <span class="font-2-m">R$ 3999</span>
+                </a>
+            </li>
+
         </ul>
-    </div>
+    </article>
 </body>
 </html>
