--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -112,8 +112,8 @@
         </div>
     </article>
 
-    <section class="partnerships container">
-        <h2 class="font-1-xxl">nossos parceiros<span>.</span></h2>
+    <section class="partnerships">
+        <h2 class="font-1-xxl container">nossos parceiros<span>.</span></h2>
         <ul>
             <li><img src="img/parceiros/caravan.svg" alt="caravan"></li>
             <li><img src="img/parceiros/ranek.svg" alt="ranek"></li>
@@ -124,6 +124,18 @@
             <li><img src="img/parceiros/wildbeast.svg" alt="wildbeast"></li>
             <li><img src="img/parceiros/surfbot.svg" alt="surfbot"></li>
         </ul>
+    </section>
+
+    <section class="testemonial">
+        <div class="testemonial-img">
+            <img src="./img/fotos/depoimento.jpg" alt="pessoa pedalando uma bicicleta bikcraft">
+        </div>
+            <div class="testemonial-content">
+                <blockquote class="font-1-xl">
+                    <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+                </blockquote>
+                <span class="font-1-m-b">Ana Júlia</span>
+            </div>
     </section>
 </body>
 </html>
