--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="introduction-content">
                 <h1 class="font-1-xxl">Bicicletas feitas sob medida<span>.</span></h1>
                 <p class="font-2-l">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft</p>
-                <a class="botao" href="#">Escolha a sua</a>
+                <a class="button" href="#">Escolha a sua</a>
             </div>
             <div class="introduction-img">
                 <img src="./img/fotos/introducao.jpg" alt="bicicleta elétrica">
@@ -130,12 +130,44 @@
         <div class="testemonial-img">
             <img src="./img/fotos/depoimento.jpg" alt="pessoa pedalando uma bicicleta bikcraft">
         </div>
-            <div class="testemonial-content">
-                <blockquote class="font-1-xl">
-                    <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
-                </blockquote>
-                <span class="font-1-m-b">Ana Júlia</span>
-            </div>
+        <div class="testemonial-content">
+            <blockquote class="font-1-xl">
+                <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+            </blockquote>
+            <span class="font-1-m-b">Ana Júlia</span>
+        </div>
     </section>
+
+    <article class="insurance-bg">
+        <div class="container insurance">
+            <h2 class="font-1-xxl ">seguros<span>.</span></h2>
+            <div class="insurance-items">
+                <h3 class="font-1-xl">PRATA</h3>
+                <span class="font-1-xl">R$ 199 <span class="span-monthly font-1-xs">mensal</span></span>
+                
+                <ul class="font-2-m">
+                    <li>Duas trocas por ano</li>
+                    <li>Assistência técnica</li>
+                    <li>Suporte 08h às 18h</li>
+                    <li>Cobertura estadual</li>
+                </ul>
+                <a class="button secondary" href="./orcamento.html">INSCREVA-SE</a>
+            </div>
+            <div class="insurance-items">
+                <h3 class="font-1-xl">OURO</h3>
+                <span class="font-1-xl">R$ 299 <span class="span-monthly font-1-xs">mensal</span></span>
+                
+                <ul class="font-2-m">
+                    <li>Cinco trocas por ano</li>
+                    <li>Assistência especial</li>
+                    <li>Suporte 24h</li>
+                    <li>Cobertura nacional</li>
+                    <li>Desconto em parceiros</li>
+                    <li>Acesso ao Clube Bikcraft</li>
+                </ul>
+                <a class="button" href="./orcamento.html">INSCREVA-SE</a>
+            </div>
+        </div>
+    </article>
 </body>
 </html>
