--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <a class="button secondary" href="./orcamento.html">INSCREVA-SE</a>
             </div>
             <div class="insurance-items">
-                <h3 class="font-1-xl">OURO</h3>
+                <h3 class="font-1-xl gold">OURO</h3>
                 <span class="font-1-xl">R$ 299 <span class="span-monthly font-1-xs">mensal</span></span>
                 
                 <ul class="font-2-m">
@@ -169,5 +169,44 @@
             </div>
         </div>
     </article>
+
+    <footer class="footer-bg">
+        <div class="footer container">
+            <img src="./img/bikcraft.svg" alt="bikcraft">
+       
+            <div class="footer-contact">
+                <h3 class="font-2-l-b">CONTATO</h3>
+                <ul class="font-2-m">
+                    <li><a href="tel:+55 21 9999-9999">+55 21 9999-9999</a></li>
+                    <li><a href="mailto">contato@bikcraft.com</a></li>
+                    <li>Rua Ali Perto, 42 - Botafogo</li>
+                    <li>Rio de Janeiro - RJ</li>
+                </ul>
+                <div class="footer-networks">
+                    <a href="./">
+                        <img src="./img/redes/instagram.svg" alt="instagram">
+                    </a>
+                    <a href="./">
+                        <img src="./img/redes/facebook.svg" alt="facebook">
+                    </a>
+                    <a href="./">
+                        <img src="./img/redes/youtube.svg" alt="youtube">
+                    </a>
+                </div>
+            </div>
+            <div class="footer-information">
+                <h3 class="font-2-l-b">INFORMAÇÕES</h3>
+                <nav>
+                    <ul class="font-1-m">
+                        <li><a href="#">Bicicletas</a></li>
+                        <li><a href="#">Seguros</a></li>
+                        <li><a href="#">Contato</a></li>
+                        <li><a href="#">Termos e Condições</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <p class="font-2-m">Bikcraft © Alguns direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
