--- a/terms.html
+++ b/terms.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="terms">
     <header class="header-bg">
         <div class="header container">
             <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft"></a>
@@ -51,6 +51,7 @@
 
             <h2 class="font-1-l">3. Seguro Bikcraft</h2>
             <p>3.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+        </div>
     </main>
 
     <footer class="footer-bg">
