--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft"></a>
             <nav aria-label="primary">
                 <ul class="header-menu font-1-m">
-                    <li><a href="#">Bicicletas</a></li>
+                    <li><a href="./bikes.html">Bicicletas</a></li>
                     <li><a href="#">Seguros</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
@@ -198,10 +198,10 @@
                 <h3 class="font-2-l-b">INFORMAÇÕES</h3>
                 <nav>
                     <ul class="font-1-m">
-                        <li><a href="#">Bicicletas</a></li>
+                        <li><a href="./bikes.html">Bicicletas</a></li>
                         <li><a href="#">Seguros</a></li>
                         <li><a href="#">Contato</a></li>
-                        <li><a href="#">Termos e Condições</a></li>
+                        <li><a href="./terms.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
