--- a/bikes.html
+++ b/bikes.html
@@ -25,8 +25,8 @@
             <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft"></a>
             <nav aria-label="primary">
                 <ul class="header-menu font-1-m">
-                    <li><a href="#">Bicicletas</a></li>
-                    <li><a href="#">Seguros</a></li>
+                    <li><a href="./bikes.html">Bicicletas</a></li>
+                    <li><a href="./insurance.html">Seguros</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
