--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <nav aria-label="primary">
                 <ul class="header-menu font-1-m">
                     <li><a href="./bikes.html">Bicicletas</a></li>
-                    <li><a href="#">Seguros</a></li>
+                    <li><a href="./insurance.html">Seguros</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
@@ -199,7 +199,7 @@
                 <nav>
                     <ul class="font-1-m">
                         <li><a href="./bikes.html">Bicicletas</a></li>
-                        <li><a href="#">Seguros</a></li>
+                        <li><a href="./insurance.html">Seguros</a></li>
                         <li><a href="#">Contato</a></li>
                         <li><a href="./terms.html">Termos e Condições</a></li>
                     </ul>
