Add-pages-bikes

--- a/bikes.html
+++ b/bikes.html
@@ -68,7 +68,7 @@
                             Rastreador
                         </li>
                     </ul>
-                    <a class="button arrows" href="./bikes/nimbus.html">Mais Sobre</a>
+                    <a class="button arrows" href="./page-bikes/nimbus.html">Mais Sobre</a>
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
                             Rastreador
                         </li>
                     </ul>
-                    <a class="button arrows" href="./bikes/magic.html">Mais Sobre</a>
+                    <a class="button arrows" href="./page-bikes/magic.html">Mais Sobre</a>
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
                             Rastreador
                         </li>
                     </ul>
-                    <a class="button arrows" href="./bikes/nebula.html">Mais Sobre</a>
+                    <a class="button arrows" href="./page-bikes/nebula.html">Mais Sobre</a>
                 </div>
             </div>
         </div>
