--- a/terms.html
+++ b/terms.html
@@ -85,7 +85,7 @@
                         <li><a href="./bikes.html">Bicicletas</a></li>
                         <li><a href="./insurance.html">Seguros</a></li>
                         <li><a href="#">Contato</a></li>
-                        <li><a href="#">Termos e Condições</a></li>
+                        <li><a href="./terms.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
