--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul class="header-menu font-1-m">
                     <li><a href="./bikes.html">Bicicletas</a></li>
                     <li><a href="./insurance.html">Seguros</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="./contact.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -201,7 +201,7 @@
                     <ul class="font-1-m">
                         <li><a href="./bikes.html">Bicicletas</a></li>
                         <li><a href="./insurance.html">Seguros</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="./contact.html">Contato</a></li>
                         <li><a href="./terms.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
