--- a/insurance.html
+++ b/insurance.html
@@ -27,7 +27,7 @@
                 <ul class="header-menu font-1-m">
                     <li><a href="./bikes.html">Bicicletas</a></li>
                     <li><a href="./insurance.html">Seguros</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="./contact.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -171,10 +171,10 @@
                 <h3 class="font-2-l-b">INFORMAÇÕES</h3>
                 <nav>
                     <ul class="font-1-m">
-                        <li><a href="#">Bicicletas</a></li>
+                        <li><a href="./bikes.html">Bicicletas</a></li>
                         <li><a href="./insurance.html">Seguros</a></li>
-                        <li><a href="#">Contato</a></li>
-                        <li><a href="#">Termos e Condições</a></li>
+                        <li><a href="./contact.html">Contato</a></li>
+                        <li><a href="./terms.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
