--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body id="contact">
     <header class="header-bg">
@@ -89,6 +85,43 @@
             </section>
         </div>
     </main>
+
+    <article class="stores container">
+        <h2 class="font-1-xxl">lojas locais<span>.</span></h2>
+        <div class="stores-items">
+            <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço, rua Ali Perto, número 25, Rio de Janeiro - RJ">
+
+            <div class="stores-content">
+                <h3 class="font-1-xl">Rio de Janeiro</h3>
+                <div class="stores-data font-2-s">
+                    <p>Rua Ali Perto, 25</p>
+                    <p>Rio de Janeiro - RJ</p>
+                </div>
+                <div class="stores-data font-2-s">
+                    <a href="mailto:rio@bikcraft.com">rio@bikcraft.com</a>
+                    <a href="tel:21 9999-9999">21 9999-9999</a>
+                </div>
+                <p class="stores-temp font-1-s"><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+                        </div>
+            </div>
+
+        <div class="stores-items">
+            <img src="./img/lojas/sp.jpg" alt="mapa marcando o endereço, rua Ali Perto, número 25, São Paulo - SP">
+
+            <div class="stores-content">
+                <h3 class="font-1-xl">São Paulo</h3>
+                <div class="stores-data font-2-s">
+                    <p>Rua Ali Perto, 25</p>
+                    <p>São Paulo - RJ</p>
+                </div>
+                <div class="stores-data font-2-s">
+                    <a href="mailto:sp@bikcraft.com">rio@bikcraft.com</a>
+                    <a href="tel:11 9999-9999">21 9999-9999</a>
+                </div>
+                <p class="stores-temp font-1-s"><img src="./img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+                        </div>
+            </div>
+    </article>
 
     <footer class="footer-bg">
         <div class="footer container">
