--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <title>Contato</title>
     <meta name="description" content="Contato">
 
+    <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href=".css/global/header.css">
 
@@ -62,6 +63,7 @@
                     </a>
                 </div>
             </section>
+            
             <section class="contact-form" aria-label="formulario">
                 <form action="./contact.html" class="form">
                     <div>
