--- a/terms.html
+++ b/terms.html
@@ -8,6 +8,7 @@
     <title>Termos e Condições</title>
     <meta name="description" content="Termos e Condições">
 
+    <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href=".css/global/header.css">
 
