--- a/insurance.html
+++ b/insurance.html
@@ -53,7 +53,7 @@
                     <li>Suporte 08h às 18h</li>
                     <li>Cobertura estadual</li>
                 </ul>
-                <a class="button secondary" href="./orcamento.html">INSCREVA-SE</a>
+                <a class="button secondary" href="./budget.html">INSCREVA-SE</a>
             </div>
 
             <div class="insurance-items">
@@ -68,7 +68,7 @@
                     <li>Desconto em parceiros</li>
                     <li>Acesso ao Clube Bikcraft</li>
                 </ul>
-                <a class="button" href="./orcamento.html">INSCREVA-SE</a>
+                <a class="button" href="./budget.html">INSCREVA-SE</a>
             </div>
         </div>
 
