Add-script.js-insurance

--- a/insurance.html
+++ b/insurance.html
@@ -116,7 +116,7 @@
     <article class="questions container">
         <h2 class="font-1-xxl">perguntas frequentes<span>.</span></h2>
 
-        <dl>
+        <dl class="js-accordion">
             <div>
                 <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
                 <dd class="font-2-s">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
@@ -182,5 +182,6 @@
             <p class="font-2-m">Bikcraft © Alguns direitos reservados.</p>
         </div>
     </footer>
+    <script src="./script.js"></script>
 </body>
 </html>
